Updated dup code. Need to fix overlapping photo

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -8,6 +8,7 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,900);
 
 
+
 html,
 body {
   overflow-x: hidden;
@@ -176,7 +177,7 @@ body {
 
 
 
-.text-end p {
+.text p {
   font-family: 'Noto Sans JP', sans-serif;
   font-weight: 300;
   margin: 1px;
@@ -276,11 +277,15 @@ span#dan{
 }
 
 .text-center {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .card-title {
   font-weight: bolder;
+  font-family: 'Oswald', sans-serif;
+  font-size: x-large;
+  letter-spacing: 2.5px;
+  color: #333333;
 }
 .card-body {  
   font-weight:bolder;
